AUTOMAKE_OPTIONS = foreign
##SUBDIRS = SnowTools/blat SnowTools/multifast-v1.4.2/ahocorasick SnowTools/SGA/Util SnowTools/SGA/SQG SnowTools/SGA/Bigraph SnowTools/SGA/Algorithm SnowTools/SGA/StringGraph SnowTools/SGA/SuffixTools SnowTools/bwa SnowTools/htslib SnowTools/src src
SUBDIRS = SnowTools/multifast-v1.4.2/ahocorasick SnowTools/htslib SnowTools/src src
